# FinalProject_1_Perfilova

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: rates.json
src/finalproject_1_perfilova/: cli.py  decorators.py  logging_config.py
src/finalproject_1_perfilova/cli/: interface.py
src/finalproject_1_perfilova/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
src/finalproject_1_perfilova/infra/: database.py  settings.py
src/finalproject_1_perfilova/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
