[project]
name = "finalproject_1_perfilova"
version = "0.1.0"
description = ""
authors = [
    {name = "FrostyFire",email = "FrostyFire777@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "prettytable (>=3.17.0,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"

[tool.poetry.scripts]
project = "finalproject_1_perfilova.cli.interface:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.valutatrade]
DATA_DIR = "data"
RATES_TTL_SECONDS = 300
BASE_CURRENCY = "USD"
LOG_DIR = "logs"